--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -8,25 +8,24 @@
    "outputs": [
     {
      "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'CNF_lib'",
+     "evalue": "No module named 'methods'",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmethods\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mregression_methods\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m NGGP\n",
-      "File \u001b[0;32m~/anaconda3/envs/nggp/lib/python3.11/site-packages/methods/__init__.py:1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mCNF_lib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcustom_optimizers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mCNF_lib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mvisualize_flow\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mCNF_lib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpriors\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'CNF_lib'"
+      "Cell \u001b[0;32mIn[10], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmethods\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m regression_methods\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'methods'"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "from methods.regression_methods import NGGP"
+    "from methods import regression_methods"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "baa0a37f",
    "metadata": {},
    "outputs": [
@@ -34,12 +33,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['/Users/jessegill/Desktop/nggp/nggp_lib/notebooks', '/Users/jessegill/anaconda3/envs/nggp/lib/python311.zip', '/Users/jessegill/anaconda3/envs/nggp/lib/python3.11', '/Users/jessegill/anaconda3/envs/nggp/lib/python3.11/lib-dynload', '', '/Users/jessegill/anaconda3/envs/nggp/lib/python3.11/site-packages', '/Users/jessegill/anaconda3/envs/nggp/lib/python3.11/site-packages/aeosa', '/Users/jessegill/anaconda3/envs/nggp/lib/python3.11/site-packages/nggp_lib-0.1-py3.11.egg']\n"
+      "['/Users/jessegill/Desktop/nggp/nggp_lib/notebooks', '/Users/jessegill/anaconda3/lib/python311.zip', '/Users/jessegill/anaconda3/lib/python3.11', '/Users/jessegill/anaconda3/lib/python3.11/lib-dynload', '', '/Users/jessegill/anaconda3/lib/python3.11/site-packages', '/Users/jessegill/anaconda3/lib/python3.11/site-packages/aeosa', '/Users/jessegill/mlpractical']\n"
      ]
     }
    ],
    "source": [
-    "import sys\n"
+    "import sys\n",
+    "print(sys.path)\n"
    ]
   },
   {
